# subT

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  nginx.conf  start.sh
backend/: main.py  pyproject.toml  subtitle_generator.py  transcriber.py  video_processor.py
backend/subtitle_creator_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: index.html
frontend/src/: App.jsx  index.css
